Weird layout bug in work fixed

--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -2,7 +2,9 @@
 .work {
   @include desktop{
     margin: 20vh 0;
+    height: 80vh;
   }
+  
     overflow: hidden;
     position: relative;
     display: flex;
@@ -46,8 +48,7 @@
   display: flex;
   flex-direction: column;
 }
-.work-small-picture {
-   
+.work-small-picture {   
     position: absolute;     
     object-fit: cover;
     cursor: pointer; 
@@ -76,7 +77,7 @@
         top:2rem;   
       }
       width: 80%;
-      height: 80%;
+      height: 100%;
     }
 }
 
